<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent"
	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
	<ImageView android:id="@+id/imageView" android:src="@drawable/start_screen_bg_alpha_10"
		android:scaleType="centerCrop" android:layout_gravity="center"
		android:layout_height="match_parent" android:layout_width="match_parent">
	</ImageView>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent" android:layout_height="match_parent"
		android:weightSum="1" android:orientation="vertical">
		<ImageView android:id="@+id/trailImage"
			android:layout_width="match_parent" android:src="@drawable/ic_tab_favorites"
			android:layout_height="180dp"></ImageView>
		<ScrollView android:layout_width="match_parent" android:id="@+id/scrollView1"
			android:layout_weight="0.32" android:layout_height="match_parent">
			<LinearLayout android:id="@+id/linearLayout1"
				android:layout_width="match_parent" android:layout_height="match_parent"
				android:orientation="vertical">
				<LinearLayout android:layout_width="match_parent"
					android:id="@+id/linearRow1" android:layout_height="wrap_content">
					<LinearLayout android:layout_width="20px"
						android:id="@+id/linearLayoutNameLeft" android:layout_height="match_parent"
						android:orientation="vertical" android:layout_weight="0.02">
						<TextView android:text="@string/detail_title" android:id="@+id/trailNameDes"
							android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
					</LinearLayout>
					<LinearLayout android:layout_width="100px"
						android:id="@+id/linearLayoutNameRight" android:layout_height="match_parent"
						android:orientation="vertical" android:layout_weight="0.03">
						<TextView android:text="@string/detail_na" android:id="@+id/detailTrailName"
							android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
					</LinearLayout>
				</LinearLayout>
				<LinearLayout android:layout_width="match_parent"
					android:id="@+id/linearRow2" android:layout_height="wrap_content">
					<LinearLayout android:layout_width="20px"
						android:id="@+id/linearLayoutCountryLeft" android:layout_height="match_parent"
						android:orientation="vertical" android:layout_weight="0.02">
						<TextView android:text="@string/detail_country"
							android:id="@+id/trailCountryDes" android:layout_width="wrap_content"
							android:layout_height="wrap_content"></TextView>
					</LinearLayout>
					<LinearLayout android:layout_width="100px"
						android:id="@+id/linearLayoutCountryRight" android:layout_height="match_parent"
						android:orientation="vertical" android:layout_weight="0.03">
						<TextView android:text="@string/detail_na" android:id="@+id/detailTrailCountry"
							android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
					</LinearLayout>
				</LinearLayout>
				<LinearLayout android:layout_width="match_parent"
					android:id="@+id/linearLayoutRow4" android:layout_height="wrap_content">
					<LinearLayout android:layout_width="20px"
						android:id="@+id/linearLayoutInfoLeft" android:layout_height="match_parent"
						android:orientation="vertical" android:layout_weight="0.02">
						<TextView android:text="@string/detail_infos" android:id="@+id/trailInfoDes"
							android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
					</LinearLayout>
					<LinearLayout android:layout_width="100px"
						android:id="@+id/linearLayoutInfoRight" android:layout_height="match_parent"
						android:orientation="vertical" android:layout_weight="0.03">
						<TextView android:text="@string/detail_na" android:id="@+id/detailTrailInfo"
							android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
					</LinearLayout>
				</LinearLayout>
				<LinearLayout android:layout_width="match_parent"
					android:id="@+id/linearRow3" android:layout_height="wrap_content">
					<LinearLayout android:layout_width="20px"
						android:id="@+id/linearLayoutDescriptionLeft"
						android:layout_height="match_parent" android:orientation="vertical"
						android:layout_weight="0.02">
						<TextView android:text="@string/detail_description"
							android:id="@+id/trailDescriptionDes" android:layout_width="wrap_content"
							android:layout_height="wrap_content"></TextView>
					</LinearLayout>
					<LinearLayout android:layout_width="100px"
						android:id="@+id/linearLayoutDescriptionRight"
						android:layout_height="match_parent" android:orientation="vertical"
						android:layout_weight="0.03">
						<TextView android:text="@string/detail_na" android:id="@+id/detailTrailDescription"
							android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
					</LinearLayout>
				</LinearLayout>

			</LinearLayout>
		</ScrollView>
	</LinearLayout>
</FrameLayout>
